# wen-program-library

./: .env.sample  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  copy-idls.sh  kinobi.mjs  package-lock.json  package.json  pnpm-lock.yaml  test_sale-keypair.json
clients/js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/js/wen_new_standard/: README.md  package.json  tsconfig.declarations.json  (+1 more)
clients/rust/wen_new_standard/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/wen_new_standard/src/: lib.rs
clients/wns-sdk/: .eslintrc.js  package.json  tsconfig.json
examples/: package.json  tsconfig.json
examples/src/: index.ts  util.ts
idls/: wen_new_standard.json  wen_royalty_distribution.json  wen_transfer_guard.json  wen_wns_marketplace.json
libraries/royalties-interface/: Cargo.toml
programs/: Anchor.toml  Cargo.toml
programs/test_sale/: Cargo.toml
programs/test_sale/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/test_sale/src/instructions/: mod.rs
programs/test_sale/src/instructions/listing/: fulfill.rs  list.rs  mod.rs  royalty.rs  unlist.rs
programs/test_sale/src/instructions/prep/: group.rs  init.rs  mint.rs  mod.rs  spl.rs
programs/test_sale/src/state/: listing.rs
programs/wen-new-standard/: Cargo.toml
programs/wen-new-standard/src/: errors.rs  lib.rs  utils.rs
programs/wen-new-standard/src/instructions/: mod.rs
programs/wen-new-standard/src/instructions/group/: create.rs  mod.rs  update.rs
programs/wen-new-standard/src/instructions/manager/: init.rs
programs/wen-new-standard/src/instructions/mint/: add_metadata.rs  create.rs  mod.rs  remove_metadata.rs
programs/wen-new-standard/src/instructions/mint/group/: add.rs
programs/wen-new-standard/src/instructions/mint/royalties/: add.rs  mod.rs  modify.rs  modify_creator.rs
programs/wen-new-standard/src/instructions/royalty/: approve.rs  execute.rs
programs/wen-new-standard/src/instructions/token/: mint.rs
programs/wen-new-standard/src/state/: approve.rs  group.rs  manager.rs  member.rs  mod.rs
programs/wen-royalty-distribution/: Cargo.toml
programs/wen-royalty-distribution/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/wen-royalty-distribution/src/instructions/: claim.rs  initialize.rs  update.rs
programs/wen_new_standard/: Cargo.toml  README.md
programs/wen_new_standard/src/: errors.rs  lib.rs  token_22_cpi.rs  utils.rs
programs/wen_new_standard/src/instructions/: mod.rs
programs/wen_new_standard/src/instructions/bump/: group.rs  group_member.rs  manager.rs  mod.rs
programs/wen_new_standard/src/instructions/group/: create.rs  update.rs
programs/wen_new_standard/src/instructions/manager/: init.rs  mod.rs
programs/wen_new_standard/src/instructions/mint/: burn.rs  create.rs  freeze.rs  mod.rs  thaw.rs
programs/wen_new_standard/src/instructions/mint/group/: add.rs  remove.rs
programs/wen_new_standard/src/instructions/mint/metadata/: add.rs  mod.rs  remove.rs
programs/wen_new_standard/src/instructions/mint/royalties/: add.rs  mod.rs  modify.rs
programs/wen_new_standard/src/instructions/resize/: approve.rs  group.rs  group_member.rs  manager.rs  mod.rs
programs/wen_new_standard/src/instructions/royalty/: approve.rs  execute.rs  mod.rs
programs/wen_new_standard/src/instructions/transfer_guard/: mod.rs  setup.rs
programs/wen_new_standard/src/state/: approve.rs  group.rs  manager.rs  member.rs  mod.rs
programs/wen_royalty_distribution/: Cargo.toml  README.md
programs/wen_royalty_distribution/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/wen_royalty_distribution/src/instructions/: bump.rs  claim.rs  initialize.rs  mod.rs  resize.rs  update.rs
programs/wen_transfer_guard/: Cargo.toml  README.md
programs/wen_transfer_guard/src/: constants.rs  error.rs  lib.rs
programs/wen_transfer_guard/src/instructions/: create_guard.rs  execute.rs  initialize.rs  mod.rs  update_guard.rs
programs/wen_transfer_guard/src/state/: anchor_extra_account_meta.rs  cpi_rules.rs  guard.rs  mod.rs
programs/wen_transfer_guard/src/tools/: checks.rs  helpers.rs  mod.rs  space.rs
programs/wen_wns_marketplace/: Cargo.toml
programs/wen_wns_marketplace/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/wen_wns_marketplace/src/instructions/: mod.rs
programs/wen_wns_marketplace/src/instructions/listing/: buy.rs  buy_transfer_guard.rs  list.rs  mod.rs  royalty.rs  unlist.rs
programs/wen_wns_marketplace/src/state/: listing.rs  mod.rs  sale.rs
scripts/: README.md  package-lock.json  package.json
scripts/src/: audit.ts  calculate.ts  resize.ts  update.ts  utils.ts
tests/: test.ts  utils.ts  wen_new_standard.test.ts  wen_royalty_distribution.test.ts  wen_transfer_guard.test.ts
wpl_cli/: Cargo.toml  README.md
wpl_cli/src/: args.rs  main.rs  utils.rs
wpl_cli/src/asset/: cmd.rs  create.rs
wpl_cli/src/asset/instructions/: burn.rs  create.rs  freeze.rs  get.rs  mod.rs  thaw.rs
wpl_cli/src/asset/instructions/metadata/: cmd.rs  data.rs  mod.rs
wpl_cli/src/asset/instructions/metadata/instructions/: add.rs  remove.rs
wpl_cli/src/asset/instructions/royalty/: cmd.rs  data.rs  mod.rs
wpl_cli/src/asset/instructions/royalty/instructions/: add.rs  modify.rs
wpl_cli/src/group/: cmd.rs  create.rs  mod.rs
wpl_cli/src/group/instructions/: create.rs  get.rs  mod.rs  update.rs
wpl_cli/src/group/instructions/asset/: cmd.rs  data.rs  mod.rs
wpl_cli/src/group/instructions/asset/instructions/: add.rs  remove.rs
wpl_cli/src/group/instructions/mint/: cmd.rs  data.rs  mod.rs
wpl_cli/src/group/instructions/mint/instructions/: add.rs  remove.rs
wpl_cli/src/manager/: cmd.rs  init.rs  mod.rs
wpl_cli/src/mint/: cmd.rs  mod.rs
wpl_cli/src/mint/instructions/: burn.rs  create.rs  freeze.rs  mod.rs  thaw.rs
wpl_cli/src/mint/instructions/metadata/: cmd.rs  data.rs
wpl_cli/src/mint/instructions/metadata/instructions/: add.rs  remove.rs
wpl_cli/src/mint/instructions/royalty/: cmd.rs  data.rs
wpl_cli/src/mint/instructions/royalty/instructions/: add.rs  mod.rs  modify.rs
(+57 files in other folders)
