[workspace]
members = ["programs/*", "libraries/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = [
  "init-if-needed",
  "interface-instructions",
  "allow-missing-optionals",
] }
anchor-spl = { version = "0.30.1" }
wen_new_standard = { path = "programs/wen_new_standard", features = ["cpi"] }
wen_royalty_distribution = { path = "programs/wen_royalty_distribution", features = [
  "cpi",
] }
wen-royalties-interface = { path = "libraries/royalties-interface" }
spl-transfer-hook-interface = "0.6.5"
spl-tlv-account-resolution = "0.6.5"
spl-pod = "0.2.5"
spl-type-length-value = "=0.3.0"
solana-program = "1.18.18"
spl-associated-token-account = "3.0.2"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.5"
solana-system-program = "1.18.18"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
