[package]
name = "wpl-cli"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "cargo", "env"] }
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
wen_new_standard = { path = "../clients/rust/wen_new_standard" }
