[package]
name = "test_sale"
version = "0.1.0"
description = "A minimalistic sale program demonstrating WNS and Wen distribution royalty functionalities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_sale"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build", 
  "anchor-spl/idl-build", 
  "wen_new_standard/idl-build", 
  "wen_royalty_distribution/idl-build"
]

[dependencies]
anchor-lang = { version = "0.30.0", features = [
  "init-if-needed",
  "interface-instructions",
] }
anchor-spl = { version = "0.30.0"}
spl-transfer-hook-interface = "^0.5.1"
wen_new_standard = { path = "../wen_new_standard", features = [
  "cpi",
] }
wen_royalty_distribution = { path = "../wen_royalty_distribution", features = [
  "cpi",
] }
