[package]
name = "wen_new_standard"
version = "0.0.1-alpha"
description = "An open and composable NFT standard on Solana."
edition = "2021"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_new_standard"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

# This depends on a fork of Anchor, while determining the best course of 
# action to merge Anchor support for these tools, we have added the 
# compiled Anchor binaries to the root of this directory.
[dependencies]
anchor-lang = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "ssh://git@github.com/bridgesplit/anchor", features = ["token_2022_extensions", "token_2022"] }
spl-pod = "0.1.0"
spl-transfer-hook-interface = { version = "0.5.0" } 
spl-tlv-account-resolution = "0.4.0"
wen_royalty_distribution = { path = "../wen-royalty-distribution", features = ["cpi"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]