[package]
name = "wen_royalty_distribution"
version = "0.0.1"
description = "Distribution program for WNS royalties"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_royalty_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { path = "../../../anchor/lang", features = ["interface-instructions"] }
anchor-spl = { path = "../../../anchor/spl", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" } 
spl-tlv-account-resolution = "0.4.0"
spl-pod = "0.1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
