[package]
name = "wen_new_standard"
version = "0.3.2-alpha"
description = "An open and composable NFT standard on Solana."
edition = "2021"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_new_standard"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "wen_royalty_distribution/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.0", features = [
  "init-if-needed",
  "interface-instructions",
] }
anchor-spl = "0.30.0"
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"
wen_royalty_distribution = { path = "../wen_royalty_distribution", features = [
  "cpi",
] }
