[package]
name = "wen_new_standard"
version = "0.3.2-alpha"
description = "An open and composable NFT standard on Solana."
edition = "2021"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[profile.release]
overflow-checks = true

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_new_standard"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "wen_royalty_distribution/idl-build",
]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
wen_royalty_distribution.workspace = true
spl-transfer-hook-interface.workspace = true
spl-tlv-account-resolution.workspace = true
