[package]
name = "wen_royalty_distribution"
version = "0.1.0-alpha"
description = "Distribution program for WNS royalties"
edition = "2018"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_royalty_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "shttps://github.com/bridgesplit/anchor.git", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" } 
spl-tlv-account-resolution = "0.4.0"
spl-pod = "0.1.0"
