[package]
name = "wen_royalty_distribution"
version = "0.2.0-alpha"
description = "Distribution program for WNS royalties"
edition = "2018"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_royalty_distribution"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
spl-transfer-hook-interface.workspace = true
spl-tlv-account-resolution.workspace = true
