[package]
name = "wen_transfer_guard"
version = "0.1.0"
description = "A generic transfer hook implementation for Token Extensions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_transfer_guard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["interface-instructions"] }
anchor-spl = "0.30.0"
spl-pod = "0.2.2"
spl-transfer-hook-interface = { version = "0.5.0" }
spl-tlv-account-resolution = "0.4.0"

