[package]
name = "wen_transfer_guard"
version = "0.1.0"
description = "A generic transfer hook implementation for Token Extensions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wen_transfer_guard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-pod.workspace = true
spl-transfer-hook-interface.workspace = true
spl-tlv-account-resolution.workspace = true
