[package]
description = "An open and composable NFT standard on Solana."
name = "wen_new_standard"
version = "0.5.0-alpha"
edition = "2021"
authors = ["Balmy Gazebo <balmy@wencoinfoundation.com>"]
license = "MIT"
repository = "https://github.com/wen-community/wen-program-library/clients/rust/wen_new_standard"
documentation = "https://docs.wenwencoin.com"
homepage = "https://wenwencoin.com"
keywords = ["wen", "wns", "nft", "solana", "blockchain"]
readme = "README.md"

[workspace]

[features]
anchor = ["dep:anchor-lang"]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
anchor-lang = { version = "0.30.1", optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~1.18"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.18"
solana-sdk = "~1.18"
